# nex

./: .gitignore  CMakeLists.txt  Doxyfile  array.c  array.h  box.c  box.h  cache.c  cache.h  defs.h  fgrid2.c  fgrid2.h  fgrid3.c  fgrid3.h  fgridn.c  fgridn.h  grid2.c  grid2.h  main.c  main.h  makefile  narray.c  narray.h  nloop.c  nloop.h  ntree.c  ntree.h  range.c  range.h  tasks.c  tasks.h  test
examples/: CMakeLists.txt  main.c  main.h
lib/: CMakeLists.txt  array.c  cache.c  fgrid2.h  fgridn.c  grid2.c  narray.c  nloop.c  nloop.h  ntree.c
